Fix image cropping bug in lifestream
Introduced in: 75d48f3200c3974e9d96bae44fc8cbb80a14b2df

--- a/hyperbola/static/css/sitewide.css
+++ b/hyperbola/static/css/sitewide.css
@@ -177,7 +177,7 @@ body.lifestream .hyperbola-nav-items li.hyperbola-lifestream a {
 }
 
 /* lifestream */
-.blurb a {
+.lifestream-content a {
   display: inline-block;
   vertical-align: bottom;
   text-overflow: ellipsis;
